--- a/.github/workflows/src-test.yml
+++ b/.github/workflows/src-test.yml
@@ -23,6 +23,18 @@ jobs:
      - name: Maven package
        run: mvn clean package
 
+     - name: Commit and Push target folder
+       run: |
+       git config --local user.email "your-email@example.com"
+       git config --local user.name "Your Name"
+       git add target/
+       git commit -m "Add generated target folder"
+       git push
+       env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub provides this automatically
+
+
+
      - name: Set Java 11
        uses: actions/setup-java@v3
        with:
