--- a/.github/workflows/src-test.yml
+++ b/.github/workflows/src-test.yml
@@ -9,7 +9,7 @@ jobs:
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       ECR_REPOSITORY: vprofile_docker
-      AWS_REGION: 'us-east-1'
+      AWS_REGION: us-east-1
 
     steps:
      - name: Checkout Code
