--- a/.github/workflows/src-test.yml
+++ b/.github/workflows/src-test.yml
@@ -4,9 +4,9 @@ on: workflow_dispatch
 env:
   #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  ECR_REPOSITORY: vprofile_docker
+  ECR_REPOSITORY: vprofile_docker381492291062.dkr.ecr.us-east-1.amazonaws.com/vprofile_docker
   AWS_REGION: us-east-1
-  
+
 jobs:
   Testing:
     runs-on: ubuntu-latest
