--- a/.github/workflows/src-test.yml
+++ b/.github/workflows/src-test.yml
@@ -25,8 +25,8 @@ jobs:
 
      - name: Commit and Push target folder
        run: |
-         git config --local user.email "your-email@example.com"
-         git config --local user.name "Your Name"
+         git config --local user.email "nandusathyan0@gmail.com"
+         git config --local user.name "nandu"
          git add target/
          git commit -m "Add generated target folder"
          git push
